--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -10,7 +10,7 @@
     <tr VALIGN=TOP>
         <td>
             <ul>
-                <li><a href=#>Account 1</a></li>
+                <li><a href="index.html">Account</a></li>
                 <li><a href=#>Dashboard</a></li>
                 <li><a href=#>Courses</a></li>
                 <li><a href=#>Calenda</a></li>
@@ -25,7 +25,7 @@
         <td>
           <ul>
             <li><a href=#>Notifications</a></li>
-            <li><a href=#>Profile</a></li>
+            <li><a href="index.html">Profile</a></li>
             <li><a href=#>Files</a></li>
             <li><a href=#>Settings</a></li>
             <li><a href=#>eProfilios</a></li>
