--- a/public/kanbas/assignments/index.html
+++ b/public/kanbas/assignments/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Title</title>
+   <title>Assignments</title>
 </head>
 <body>
     
@@ -10,7 +10,7 @@
     <tr VALIGN=TOP>
         <td>
             <ul>
-                <li><a href=#>Account 1</a></li>
+                <li><a href="/kanbas/profile/index.html">Account</a></li>
                 <li><a href=#>Dashboard</a></li>
                 <li><a href=#>Courses</a></li>
                 <li><a href=#>Calenda</a></li>
@@ -24,13 +24,13 @@
 
         <td>
           <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="/kanbas/home.html">Home</a></li>
             <li><a href=#>Modules</a></li>
             <li><a href=#>Piazza</a></li>
             <li><a href=#>Zoom Meetings</a></li>
-            <li><a href=#>Assignments</a></li>
+            <li><a href="index.html">Assignments</a></li>
             <li><a href=#>Quizzes</a></li>
-            <li><a href=#>Grades</a></li>
+            <li><a href="/kanbas/grades.html">Grades</a></li>
             <li><a href=#>People</a></li>
             <li><a href=#>Discussions</a></li>
             <li><a href=#>Panopto Video</a></li>
@@ -78,12 +78,12 @@
           </h2>
 
           <ul>
-            <li><a href=#>A1 - ENV + HTML Multiple Modules</a> | Not available yet</li>
-            <li><a href=#>A2 - CSS + BOOTSTRAP Multiple Modules</a> | Not available yet</li>
-            <li><a href=#>A3 - JS + REACT Multiple Modules</a> | Not available yet</li>
-            <li><a href=#>A4 - STATE + REDUX Multiple Modules</a> | Not available yet</li>
-            <li><a href=#>A5 - NODE + SESSION Multiple Modules</a> | Not available yet</li>
-            <li><a href=#>A6 - MONGO + MONGOOSE Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">A1 - ENV + HTML Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">A2 - CSS + BOOTSTRAP Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">A3 - JS + REACT Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">A4 - STATE + REDUX Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">A5 - NODE + SESSION Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">A6 - MONGO + MONGOOSE Multiple Modules</a> | Not available yet</li>
           </ul>
 
 
@@ -102,11 +102,11 @@
           </h2>
 
           <ul>
-            <li><a href=#>Q1 - HTML Multiple Modules</a> | Not available yet</li>
-            <li><a href=#>Q2 - CSS Multiple Modules</a> | Not available yet</li>
-            <li><a href=#>Q3 - JS, ES6 Multiple Modules</a> | Not available yet</li>
-            <li><a href=#>Q4 - NODE Multiple Modules</a> | Not available yet</li>
-            <li><a href=#>Q5 - MONGO Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">Q1 - HTML Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">Q2 - CSS Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">Q3 - JS, ES6 Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">Q4 - NODE Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">Q5 - MONGO Multiple Modules</a> | Not available yet</li>
           </ul>
 
 
@@ -126,10 +126,10 @@
           </h2>
 
           <ul>
-            <li><a href=#>Midterm</a></li>
-            <li><a href=#>Multiple Modules</a> | Not available yet</li>
-            <li><a href=#>Final</a> </li>
-            <li><a href=#>Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">Midterm</a></li>
+            <li><a href="edit.html">Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">Final</a> </li>
+            <li><a href="edit.html">Multiple Modules</a> | Not available yet</li>
           </ul>
 
           <h2>PROJECTS 30% of Total
@@ -147,8 +147,8 @@
           </h2>
 
           <ul>
-            <li><a href=#>Project</a></li>
-            <li><a href=#>Multiple Modules</a> | Not available yet</li>
+            <li><a href="edit.html">Project</a></li>
+            <li><a href="edit.html">Multiple Modules</a> | Not available yet</li>
           </ul>
 
 
