--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -10,7 +10,7 @@
     <tr VALIGN=TOP>
         <td>
             <ul>
-                <li><a href=#>Account 1</a></li>
+                <li><a href="/kanbas/profile/index.html">Account</a></li>
                 <li><a href=#>Dashboard</a></li>
                 <li><a href=#>Courses</a></li>
                 <li><a href=#>Calenda</a></li>
@@ -28,9 +28,9 @@
             <li><a href=#>Modules</a></li>
             <li><a href=#>Piazza</a></li>
             <li><a href=#>Zoom Meetings</a></li>
-            <li><a href=#>Assignments</a></li>
+            <li><a href="/kanbas/assignments/index.html">Assignments</a></li>
             <li><a href=#>Quizzes</a></li>
-            <li><a href=#>Grades</a></li>
+            <li><a href="grades.html">Grades</a></li>
             <li><a href=#>People</a></li>
             <li><a href=#>Discussions</a></li>
             <li><a href=#>Panopto Video</a></li>
