--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -7,7 +7,16 @@
             }
         </style>
      </head> -->
-<link href="index.css" rel="stylesheet" />
+
+<head>
+    <link href="index.css" rel="stylesheet" />
+    <link href="../../vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet"/>
+    <link href=
+ "https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" 
+ rel="stylesheet"/>
+</head>
 
 <body>
     <h1>Cascading Style Sheets (CSS)</h1>
@@ -108,7 +117,7 @@
     </div>
 
 
-    h2>Margins</h2>
+    <h2>Margins</h2>
     <div class="wd-margin-bottom 
             wd-padded-top-left 
             wd-border-fat border-red 
@@ -282,6 +291,7 @@
         <div class="bg-color-blue">Column 2</div>
         <div class="bg-color-red">Column 3</div>
     </div>
+
 
 
     <h2>Flex</h2>
