--- a/public/kanbas/assignment2/index.html
+++ b/public/kanbas/assignment2/index.html
@@ -19,7 +19,7 @@
           </li>
           <li>
             <a href="/kanbas/assignment2/profile/index.html">
-              <i class="fa-solid fa-user" style="color: #ffffff;"></i>
+              <i class="fa-solid fa-user" style="color: #adacac;"></i>
               <span>Account</span>
             </a>
           </li>
