--- a/public/kanbas/assignment2/index.html
+++ b/public/kanbas/assignment2/index.html
@@ -15,7 +15,7 @@
       <div class="sidebar">
         <ul style="list-style: none;">
           <li>
-            <i class="fa-solid fa-n fa-2xl" style="color: #d41c2d; padding-top: 20px;"></i>
+            <i class="fa-solid fa-n fa-2xl" style="color: #d41c2d; font-size: 50px; padding-top: 20px; padding-bottom: 20px;"></i>
           </li>
           <li>
             <a href="/kanbas/assignment2/profile/index.html">
@@ -24,13 +24,13 @@
             </a>
           </li>
           <li>
-            <a href="#dashboard">
+            <a href="/kanbas/assignment2/dashboard.html">
               <i class="fas fa-tachometer-alt" style="color: #d41c2d;"></i>
               <span>Dashboard</span>
             </a>
           </li>
           <li>
-            <a href="#courses">
+            <a href="/kanbas/assignment2/home.html">
               <i class="fas fa-book" style="color: #d41c2d;"></i>
               <span>Courses</span>
             </a>
@@ -206,6 +206,7 @@
   </table>
   </div>
 
+  <script src="scripts.js"></script>
 
 </body>
 
