--- a/public/kanbas/assignment2/profile/index.html
+++ b/public/kanbas/assignment2/profile/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Assignments</title>
   <link href="../../../vendors/fontawesome/css/all.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="index.css" rel="stylesheet" />
 </head>
 
@@ -15,22 +16,25 @@
       <div class="sidebar">
         <ul style="list-style: none;">
           <li>
-            <i class="fa-solid fa-n fa-2xl" style="color: #d41c2d; padding-top: 20px;"></i>
+            <i class="fa-solid fa-n fa-2xl"
+              style="color: #d41c2d; font-size: 50px; padding-top: 20px; padding-bottom: 20px;"></i>
           </li>
-          <li>
-            <a href="/kanbas/assignment2/profile/index.html">
-              <i class="fa-solid fa-user" style="color: #ffffff;"></i>
+          <li style="background-color: white;">
+            <a href="/kanbas/assignment2/profile/index.html" class="account-link">
+              <i class="fa-solid fa-user" style="color: #adacac;"></i>
               <span>Account</span>
             </a>
           </li>
+
+
           <li>
-            <a href="#dashboard">
+            <a href="/kanbas/assignment2/dashboard.html">
               <i class="fas fa-tachometer-alt" style="color: #d41c2d;"></i>
               <span>Dashboard</span>
             </a>
           </li>
           <li>
-            <a href="#courses">
+            <a href="/kanbas/assignment2/home.html">
               <i class="fas fa-book" style="color: #d41c2d;"></i>
               <span>Courses</span>
             </a>
@@ -68,12 +72,18 @@
         </ul>
       </div>
 
-      <div class="main-content">
+      <div class="profile-name-label">
+        <i class="fa-solid fa-bars fa-xl" style="color: #d41c2d; padding: 10px;"></i>
+        Jose Annunziato's Profile
+        <hr>
+      </div>
+
+      <div class="account-sidebar">
         <table width="100%">
           <td>
             <ul>
               <li><a href=#>Notifications</a></li>
-              <li><a href="index.html">Profile</a></li>
+              <li class="selected"><a href="index.html">Profile</a></li>
               <li><a href=#>Files</a></li>
               <li><a href=#>Settings</a></li>
               <li><a href=#>eProfilios</a></li>
@@ -83,24 +93,36 @@
               <li><a href=#>Global Announcements</a></li>
             </ul>
           </td>
+        </table>
+      </div>
 
+      <div class="main-content">
+        <table width="100%">
           <td>
 
-            Jose Annunziato's Profile
+            <i class="fa-solid fa-user custom-size" style="color: #adacac;"></i>
 
-            <hr>
+            <h2 style="padding-top: 15px;">Jose Annunziato</h2>
 
-            <h2>Jose Annunziato <button type="button"> <a href="edit.html">Edit Profile</a></button></h2>
+            <h2 style="padding-top: 30px;">Contact</h2>
+            No registered services, you can add some on the
+            <a class="links" href=#>settings</a>
+            page.
 
-            <h2>Contact</h2>
-            No registered services, you can add some on the settings page.
-
-            <h2>Biography</h2>
+            <h2 style="padding-top: 30px;">Biography</h2>
             Faculty, Software Engineer, AI, Space, and renewables enthusiast.
 
-            <h2>Links</h2>
-            <a href=#>Youtube</a>
+            <h2 style="padding-top: 30px;">Links</h2>
+            <a class="links" href=#>Youtube</a>
           </td>
+          <td VALIGN=TOP>
+            <button type="button">
+              <i class="fa-solid fa-pencil fa-rotate-270"></i>
+              <a href="edit.html">Edit Profile</a>
+            </button>
+          </td>
+        </table>
+      </div>
   </tr>
   </table>
 
