--- a/public/kanbas/assignment2/grades.html
+++ b/public/kanbas/assignment2/grades.html
@@ -1,5 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Assignments</title>
+  <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet" />
+  <link href="index.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+
+<body>
+
+  <div class="container" style="margin:0px; padding:0px; max-width: 100%;">
+    <!-- Main Sidebar -->
+    <div class="sidebar">
+      <ul style="list-style: none;">
+        <li>
+          <i class="fa-solid fa-n fa-2xl"
+            style="color: #d41c2d; font-size: 50px; padding-top: 20px; padding-bottom: 20px;"></i>
+        </li>
+        <li>
+          <a href="/kanbas/assignment2/profile/index.html">
+            <i class="fa-solid fa-user" style="color: #adacac;"></i>
+            <span>Account</span>
+          </a>
+        </li>
+        <li>
+          <a href="/kanbas/assignment2/dashboard.html">
+            <i class="fas fa-tachometer-alt" style="color: #d41c2d;"></i>
+            <span>Dashboard</span>
+          </a>
+        </li>
+
+
+        <li style="background-color: white;">
+          <a href="/kanbas/assignment2/home.html" class="selected-icon-link">
+            <i class="fas fa-book" style="color: #d41c2d;"></i>
+            <span>Courses</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#calendar">
+            <i class="fas fa-calendar-alt" style="color: #d41c2d;"></i>
+            <span>Calendar</span>
+          </a>
+        </li>
+        <li>
+          <a href="#inbox">
+            <i class="fas fa-inbox" style="color: #d41c2d;"></i>
+            <span>Inbox</span>
+          </a>
+        </li>
+        <li>
+          <a href="#history">
+            <i class="fas fa-history" style="color: #d41c2d;"></i>
+            <span>History</span>
+          </a>
+        </li>
+        <li>
+          <a href="#studio">
+            <i class="fas fa-microphone" style="color: #d41c2d;"></i>
+            <span>Studio</span>
+          </a>
+        </li>
+        <li>
+          <a href="#commons">
+            <i class="fas fa-clone" style="color: #d41c2d;"></i>
+            <span>Commons</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <!-- Profile Name Label with Breadcrumb -->
+    <div class="profile-name-label">
+      <i class="fa-solid fa-bars fa-xl" style="color: #d41c2d; padding: 10px;"></i>
+      CS4400.13126.202410 > Grades
+      <hr>
+    </div>
+
+    <!-- Home Navigation Sidebar -->
+    <div class="home-sidebar">
+      <ul class="list-group">
+        <li><a href="/kanbas/assignment2/home.html">Home</a></li>
+        <li><a href=#>Modules</a></li>
+        <li><a href=#>Piazza</a></li>
+        <li><a href=#>Zoom Meetings</a></li>
+        <li><a href="/kanbas/assignment2/index.html">Assignments</a></li>
+        <li><a href=#>Quizzes</a></li>
+        <li class="selected"><a href="/kanbas/assignment2/grades.html">Grades</a></li>
+        <li><a href=#>People</a></li>
+        <li><a href=#>Discussions</a></li>
+        <li><a href=#>Panopto Video</a></li>
+        <li><a href=#>Announcements</a></li>
+        <li><a href=#>Pages</a></li>
+        <li><a href=#>Files</a></li>
+        <li><a href=#>Rubrics</a></li>
+        <li><a href=#>Outcomes</a></li>
+        <li><a href=#>Collaborations</a></li>
+        <li><a href=#>Syllabus</a></li>
+        <li><a href=#>Settings</a></li>
+      </ul>
+    </div>
+
+    <div class="row" styles="width:100%;">
+
+      <!-- Main Content -->
+      <div class="col-lg-11">
+
+
+
+
+
+        <!-- Main Content -->
+        <div class="main-content">
+
+          <div class="row">
+            <div class="col-md-6 text-end"></div>
+            <div class="col-md-6 text-end">
+              <button type="button" class="btn btn-secondary"><i class="fa-solid fa-file-import"></i>Import</button>
+              <button type="button" class="btn btn-danger"><i class="fa-solid fa-file-export"></i>Export</button>
+              <button type="button" class="btn btn-secondary"><i class="fa-solid fa-gear"></i></button>
+            </div>
+          </div>
+
+          <br>
+          <div class="row">
+            <!-- Column for the Search Input -->
+            <div class="col-md-6">
+              <form>
+                Student Names
+                <div class="form-group">
+                  <input type="text" class="form-control" id="searchforassignment" aria-describedby="emailHelp"
+                    placeholder="Search Students">
+                </div>
+              </form>
+            </div>
+
+            <!-- Column for the Buttons -->
+            <div class="col-md-6">
+              <form>
+                Assignment Names
+                <div class="form-group">
+                  <input type="text" class="form-control" id="searchforassignment" aria-describedby="emailHelp"
+                    placeholder="Search Assignments">
+                </div>
+              </form>
+            </div>
+          </div>
+
+          <br>
+
+          <button type="button" class="btn btn-secondary"><i class="fa-solid fa-filter"></i>Apply Filters</button>
+          
+          <hr>
+
+
+          <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Student Name</th>
+                    <th>A1 SETUP Out of 100</th>
+                    <th>A2 HTML Out of 100</th>
+                    <th>A3 CSS Out of 100</th>
+                    <th>A4 BOOTSTRAP Out of 100</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Marchi Lily</td>
+                    <td><input type="text" id="lname" name="lname"></td>
+                    <td>98</td>
+                    <td>97</td>
+                    <td>96</td>
+                </tr>
+                <tr>
+                    <td>Juni Ghibli</td>
+                    <td>97</td>
+                    <td><input type="text" id="lname" name="lname"></td>
+                    <td>93</td>
+                    <td>91</td>
+                </tr>
+                <tr>
+                    <td>Care Bear</td>
+                    <td>92</td>
+                    <td>94</td>
+                    <td><input type="text" id="lname" name="lname"></td>
+                    <td>98</td>
+                </tr>
+                <tr>
+                    <td>Kuromi Purple</td>
+                    <td>90</td>
+                    <td>91</td>
+                    <td>92</td>
+                    <td><input type="text" id="lname" name="lname"></td>
+                </tr>
+            </tbody>
+        </table>
+        
+
+
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+
+  <script src="your-script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <title>Assignments</title>
@@ -182,4 +412,4 @@
 <script src="your-script.js"></script>
 
 </body>
-</html>
+</html> -->
