--- a/public/kanbas/assignment2/edit.html
+++ b/public/kanbas/assignment2/edit.html
@@ -73,12 +73,21 @@
       </ul>
     </div>
 
-    <!-- Profile Name Label with Breadcrumb -->
-    <div class="profile-name-label">
+    <div class="profile-name-label d-flex align-items-center">
       <i class="fa-solid fa-bars fa-xl" style="color: #d41c2d; padding: 10px;"></i>
-      CS4400.13126.202410 > Home
-      <hr>
+    
+      <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <ol class="breadcrumb" style="margin: 0px;">
+          <li class="breadcrumb-item"><a href="/kanbas/assignment2/dashboard.html" style="color: #d41c2d; text-decoration: none;">CS4400.13126.202410</a></li>
+          <li class="breadcrumb-item"><a href="/kanbas/assignment2/index.html" style="color: #d41c2d; text-decoration: none;">Assignments</a></li>
+          <li class="breadcrumb-item active" aria-current="page">A1 - ENV + ...</li>
+        </ol>
+      </nav>
     </div>
+    <hr>
+
+
+
 
     <!-- Home Navigation Sidebar -->
     <div class="home-sidebar">
