--- a/public/kanbas/assignment2/profile/index.html
+++ b/public/kanbas/assignment2/profile/index.html
@@ -116,9 +116,9 @@
             <a class="links" href=#>Youtube</a>
           </td>
           <td VALIGN=TOP>
-            <button type="button">
+            <button type="button" class="btn btn-light">
               <i class="fa-solid fa-pencil fa-rotate-270"></i>
-              <a href="edit.html">Edit Profile</a>
+              <a href="edit.html" style="color: black; text-decoration: none;">Edit Profile</a>
             </button>
           </td>
         </table>
