--- a/public/kanbas/assignment2/profile/edit.html
+++ b/public/kanbas/assignment2/profile/edit.html
@@ -186,15 +186,15 @@
 
 
             <div class="float-end">
-              <button type="button" class="btn btn-light">Cancel</button>
-              <button type="button" class="btn btn-danger">Save</button>
+              <button type="button" class="btn btn-light"><a href="index.html" style="color: black; text-decoration: none;">Cancel</a></button>
+              <button type="button" class="btn btn-danger"><a href="index.html" style="color: white; text-decoration: none;">Save</a></button>
             </div>
           </td>
 
           <td VALIGN=TOP>
-            <button type="button">
+            <button type="button" class="btn btn-light">
               <i class="fa-solid fa-pencil fa-rotate-270"></i>
-              <a href="index.html">Cancel Editing</a>
+              <a href="index.html" style="color: black; text-decoration: none;">Cancel Editing</a>
             </button>
           </td>
 
