--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
    <title>Title</title>
 </head>
 <body>
+  <div id="root"></div>
     
-        <td>
+        <!-- <td>
           <h1>
             Labs
           </h1>
@@ -14,7 +15,7 @@
           <ul>
             <li><a href="/labs/a1/index.html">Lab1</a></li>
             <li><a href="/labs/a2/index.html">Lab2</a></li>
-            <li><a href=#>Lab3</a></li>
+            <li><a href=/labs/a3/index.html>Lab3</a></li>
             <li><a href=#>Lab4</a></li>
             <li><a href=#>Lab5</a></li>
             <li><a href=#>Lab6</a></li>
@@ -26,14 +27,14 @@
           <ul>
             <li><a href="/kanbas/assignment1/home.html">A1 - ENV + HTML</a></li>
             <li><a href="/kanbas/assignment2/home.html">A2 - CSS + BOOTSTRAP</a></li>
-            <li><a href=#>A3 - JS + REACT</a></li>
+            <li><a href=/kanbas/assignment3/home.html>A3 - JS + REACT</a></li>
             <li><a href=#>A4 - STATE + REDUX</a></li>
             <li><a href=#>A5 - NODE + SESSION</a></li>
             <li><a href=#>A6 - MONGO</a></li>
           </ul>
         </td>
     </tr>
-</table>
+</table> -->
 
 
 </body>
